# mr-importer

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  conanfile.py  generate.sh
.github/workflows/: linux.yml  macos.yml  windows.yml
bench/: assets.hpp  exe-main.cpp  final.cpp  mgr-main.cpp  par-main.cpp  seq-main.cpp
cmake/: deps.cmake
docs/html/: README_8md.html  annotated.html  annotated_dup.js  assets_8cpp.html  assets_8cpp__incl.map  assets_8cpp__incl.md5  assets_8cpp_source.html  assets_8hpp.html  assets_8hpp.js  assets_8hpp__dep__incl.map  assets_8hpp__dep__incl.md5  assets_8hpp__incl.map  assets_8hpp__incl.md5  assets_8hpp_source.html  classes.html  compiler_8cpp.html  compiler_8cpp.js  compiler_8cpp__incl.map  compiler_8cpp__incl.md5  compiler_8cpp_source.html  compiler_8hpp.html  compiler_8hpp.js  compiler_8hpp__dep__incl.map  compiler_8hpp__dep__incl.md5  compiler_8hpp__incl.map  compiler_8hpp__incl.md5  compiler_8hpp_source.html  def_8hpp.html  def_8hpp__dep__incl.map  def_8hpp__dep__incl.md5  def_8hpp__incl.map  def_8hpp__incl.md5  def_8hpp_source.html  dir_000002_000000.html  dir_4aadcbe6793b99ee71c924fa53657778.html  dir_4aadcbe6793b99ee71c924fa53657778.js  dir_4aadcbe6793b99ee71c924fa53657778_dep.map  dir_4aadcbe6793b99ee71c924fa53657778_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  (+182 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_2.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+33 more)
examples/: render_polyscope.hpp  render_raylib.hpp  rendertest.cpp  shadercompiletest.cpp
examples/shaders/: example.slang  multiple_entry_points.slang  multiple_modules.slang
examples/shaders/gammacorrection/: gammacorrector.slang  linear.slang
examples/shaders/material/: material.slang  sampler.slang
examples/shaders/material/brdf/: blinnphong.slang  disney.slang  dummy.slang  standardpbr.slang
examples/shaders/tonemapping/: aces.slang  linear.slang  tonemapper.slang
include/mr-importer/: assets.cpp  assets.hpp  compiler.cpp  compiler.hpp  def.hpp  helpers.hpp  importer.hpp  loader.cpp  loader.hpp  optimizer.cpp  optimizer.hpp  options.hpp  serializer.hpp
models/ABeautifulGame/: ABeautifulGame-opt.gltf
src/mr-importer/: assets.cpp  compiler.cpp  def.hpp  flowgraph.hpp  import_executor.cpp  importer.cpp  loader.cpp  log.hpp  optimizer.cpp  pch.hpp  serializer.cpp  usd_loader.cpp  vtll.hpp  wuffs_impl.cpp
src/mr-importer/asset_system/: asset_system.cpp  asset_system.hpp
src/mr-importer/manager/: manager.hpp  pipeline.hpp  resource.hpp
src/mr-importer/pipe/: pipe.cpp  pipe.hpp
src/mr-importer/pipeline/: pipeline.cpp  pipeline.hpp
src/mr-importer/workers/: composer.hpp  extractor.cpp  optimizer.hpp  parser.hpp  uploader.hpp
src/mr-importer/workers/extractor/: extractor.cpp  extractor.hpp
src/mr-importer/workers/optimizer/: optimizer.cpp  optimizer.hpp
tests/: main.cpp
tests/data/: triangle.usda
